<resources>
    <string name="app_name">Github CLean Architecture</string>
    <string name="button_favorite">Button Favorite</string>
    <string name="no_user_found">No User Found</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sort_asc">ASC</string>
    <string name="sort_desc">DESC</string>
    <string name="retry">Retry</string>
    <string name="by_followers">By Followers</string>
</resources>